			  - 2007-01-10:  Added new Settings / Maintenance screen with status and information about scheduled and automatic maintenance  (Matteo)
			  - 2007-01-10:  Added support for click tracking Google AdSense banners when using IE or Firefox  (Matteo)
			  - 2007-01-11:  Removed PDF documentation and added links to on-line docs available at http:/docs.openads.org  (Matteo)

			+ Misc bugfixes
			  - 2006-11-14:  Campaign-edit wasn't correctly working with MySQL 3.x anymore  (Matteo)
			  - 2006-11-16:  Fixed file uploading with PHP5 and register_long_arrays disabled  (Matteo)
			  - 2006-11-21:  HTTP headers were not correctly passed to limitations when using XML-RPC invocation - bug #1598616  (Matteo)
			  - 2006-11-22:  Turkish language wasn't present in the dropdown list - bug #1600531  (Matteo)
			  - 2006-12-14:  Added missing continent mappings - bug #1602265  (Matteo)
			  - 2006-12-14:  Advertisers weren't able to change their own passwords with regster_globals off - bug #1613935  (Matteo)
			  - 2007-01-04:  Prompt to upgrade wasn't shown if maintenance wasn't correctly running  (Matteo)
			  - 2007-01-04:  Midnight maintenance caould have been skipped when scheduled maintenance wasn't running hourly  (Matteo)
			  - 2007-01-05:  Richmedia banners were showed inside DHTML banners only when using Windows - bug #1622422  (Matteo)
			  - 2007-01-05:  Install and upgrade were always detecting HTTPS on IIS6, breaking the whole application when not using HTTPS - bug #1616963  (Matteo)
			  - 2007-01-05:  Banners not matching delivery limitations were decreasing their campaign overall priority - bug #1605728  (Matteo)
			  - 2007-01-12:  A non-existing advertiser could appear at the end of the list in the global stats pages  (Matteo)


phpAdsNew 2.0.9-pr1
			+ Misc bugfixes
			  - 2006-11-09:  Fixed reports compatibility with recent PHP versions - bug #1593451  (Matteo)